Default to visible on load, and make sure the narration fits the page width.

--- a/app/containers/arrow_map_section/scss/arrow_map_section.scss
+++ b/app/containers/arrow_map_section/scss/arrow_map_section.scss
@@ -4,5 +4,6 @@
 .graph_default.graph_arrow_map_section.active {
   width: 100%;
   height: 100%;
+  opacity: 1;
 }
 
